<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kant.epiandroid.LoginActivity">

    <include layout="@layout/toolbar_actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/loginRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/loginText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:hint="@string/login_text"
                android:inputType="textPersonName"
                android:textSize="16sp"
                app:floatingLabel="highlight"
                app:singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/passwordText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/loginText"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:textSize="16sp"
                app:floatingLabel="highlight"
                app:singleLineEllipsis="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/passwordText"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/create_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_button"
                    android:onClick="switchLayout" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/login_button"
                    android:onClick="connectUser" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/createAccountRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:visibility="gone"
            tools:context="com.example.kant.epiandroid.LoginActivity">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/usernameText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:hint="@string/create_username_text"
                android:inputType="textPersonName"
                android:textSize="16sp"
                app:floatingLabel="highlight"
                app:singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/emailText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/usernameText"
                android:hint="@string/create_email_text"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                app:floatingLabel="highlight"
                app:singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/firstnameText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/emailText"
                android:hint="@string/create_firstname_text"
                android:inputType="textPersonName"
                android:textSize="16sp"
                app:floatingLabel="highlight"
                app:singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/lastnameText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/firstnameText"
                android:hint="@string/create_lastname_text"
                android:inputType="textPersonName"
                android:textSize="16sp"
                app:floatingLabel="highlight"
                app:singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/create_passwordText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/lastnameText"
                android:hint="@string/create_password_text"
                android:inputType="textPassword"
                android:textSize="16sp"
                app:floatingLabel="highlight"
                app:singleLineEllipsis="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/create_passwordText"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/backloginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/backlogin_button"
                    android:onClick="switchLayout" />

                <Button
                    android:id="@+id/create_useraccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/createaccount_button"
                    android:onClick="createUser" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>