<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kant.artmevisual.EditProfileActivity"
    android:id="@+id/main_content"
    android:orientation="vertical">

    <include layout="@layout/toolbar_actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/editRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.example.kant.artmevisual.EditProfileActivity">

            <ImageView
                android:id="@+id/profil_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/element_spacing_normal"
                android:contentDescription="@string/event_image_desc" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/firstnameText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/profil_img"
                android:hint="@string/create_firstname_text"
                android:inputType="textPersonName"
                android:textSize="16sp"
                app:floatingLabel="highlight"
                app:singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/lastnameText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/firstnameText"
                android:hint="@string/create_lastname_text"
                android:inputType="textPersonName"
                android:textSize="16sp"
                app:floatingLabel="highlight"
                app:singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_passwordText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/lastnameText"
                android:hint="@string/create_password_text"
                android:inputType="textPassword"
                android:textSize="16sp"
                app:floatingLabel="highlight"
                app:singleLineEllipsis="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/edit_passwordText"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/edit_useraccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:hint="@string/createaccount_button"
                    android:onClick="editUser" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</LinearLayout>
