<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kant.artmevisual.EditGroupActivity">

    <include layout="@layout/toolbar_actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/editRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_spacing_normal"
            android:layout_marginLeft="@dimen/content_padding_normal"
            android:layout_marginRight="@dimen/content_padding_normal"
            android:layout_marginTop="@dimen/element_spacing_normal"
            tools:context="com.example.kant.artmevisual.EditProfileActivity">

            <ImageView
                android:id="@+id/group_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/element_spacing_normal"
                android:contentDescription="@string/event_image_desc" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/groupName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/group_img"
                android:hint="@string/edit_group_name"
                android:inputType="textPersonName"
                android:textSize="16sp"
                app:floatingLabel="highlight"
                app:singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/group_adress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/groupName"
                android:hint="@string/edit_group_adress"
                android:inputType="textPersonName"
                android:textSize="16sp"
                app:floatingLabel="highlight"
                app:singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/groupDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/group_adress"
                android:hint="@string/edit_group_description"
                android:inputType="textPassword"
                android:textSize="16sp"
                app:floatingLabel="highlight"
                app:singleLineEllipsis="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/groupDescription"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/edit_groupccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:hint="@string/edit_group"
                    android:onClick="editGroup" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</LinearLayout>

