<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kant.artmevisual.CreateEventActivity">

    <include layout="@layout/toolbar_actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_spacing_normal"
            android:layout_marginLeft="@dimen/content_padding_normal"
            android:layout_marginRight="@dimen/content_padding_normal"
            android:layout_marginTop="@dimen/element_spacing_normal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/event_img"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/event_image_desc" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_event_choose_account_string"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/account_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/create_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_event_name"
                android:textSize="34sp"
                app:floatingLabel="highlight"
                app:maxCharacters="50"
                app:singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/create_event_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_event_place"
                android:textSize="16sp"
                app:floatingLabel="highlight"
                app:singleLineEllipsis="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_event_start"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/start_date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="?attr/selectableItemBackground"
                    android:paddingBottom="@dimen/content_padding_normal"
                    android:paddingTop="@dimen/content_padding_normal"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/content_padding_normal"
                    android:layout_weight="0.7"
                    android:background="?attr/selectableItemBackground"
                    android:paddingBottom="@dimen/content_padding_normal"
                    android:paddingTop="@dimen/content_padding_normal"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_event_end"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/end_date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="?attr/selectableItemBackground"
                    android:hint="@string/create_event_end"
                    android:paddingBottom="@dimen/content_padding_normal"
                    android:paddingTop="@dimen/content_padding_normal"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/end_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/content_padding_normal"
                    android:layout_weight="0.7"
                    android:background="?attr/selectableItemBackground"
                    android:paddingBottom="@dimen/content_padding_normal"
                    android:paddingTop="@dimen/content_padding_normal"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/create_event_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_event_desc"
                android:inputType="textMultiLine"
                android:textSize="16sp"
                app:floatingLabel="highlight"
                app:maxCharacters="150" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>